kubernetes/apps/oidc/authentik/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  namespace: oidc
  annotations:
    cert-manager.io/cluster-issuer: acme-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - authentik.robotwizard.co.uk
    secretName: authentik-cert
  rules:
  - host: authentik.robotwizard.co.uk
    http:
      paths:
      - backend:
          service:
            name: authentik
            port:
              number: 9100
        path: /
        pathType: Prefix
